spacing fixes

--- a/style.css
+++ b/style.css
@@ -55,8 +55,9 @@ body {
 }
 .Second-Layer {
     position: absolute;
-    top: 1000px;       /* Adjust as needed for vertical spacing */
-    right: 20px;       /* Indent from the left edge */
+    top: 1500px;       /* Adjust as needed for vertical spacing */
+    right: 20px; 
+    text-align: right;      /* Indent from the left edge */
     font-size: 14px;  /* Set to your preferred size */
     margin: 0;        /* Remove default margin */
     font-weight: normal; /* ensures it's not bold */
@@ -64,10 +65,10 @@ body {
 }
 .Third-Layer {
     position: absolute;
-    top: 2000px;       /* Adjust as needed for vertical spacing */
+    top: 1800px;       /* Adjust as needed for vertical spacing */
     left: 120px;       /* Indent from the left edge */
     font-size: 14px;  /* Set to your preferred size */
     margin: 0;        /* Remove default margin */
     font-weight: normal; /* ensures it's not bold */
-    max-width: 500px;
+    max-width: 550px;
 }
